test/expected/explain_b-c89.out
explain bool x
        ^
9: error: "bool": unsupported type in C
